--- a/styles/criar-quiz.css
+++ b/styles/criar-quiz.css
@@ -1,8 +1,9 @@
+/*Geral*/
 body{
     font-family: 'Roboto', sans-serif;
     background: #FAFAFA;
 }
-
+/*Topo*/
 header{
     height: 69px;
     width: 100%;
@@ -22,14 +23,17 @@ header h1{
     font-size: 37px;
     color: #FFFFFF;
 }
+/*Principal*/
 
-main{
-    margin-top: 75px;
+div{
+    width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    margin-top: 75px;
 }
+
 
 main h1{
     margin: 30px 0;
@@ -37,7 +41,7 @@ main h1{
     font-size: 20px;
     color: #000000;
 }
-
+/*Input infos básicas*/
 section{
     background: #FFFFFF;
     width: 100%;
@@ -53,7 +57,7 @@ section input{
     height: 46px;
     border: 1px solid #D1D1D1;
     border-radius: 5px;
-    margin-bottom: 9px;
+    margin: 5px;
     font-family: 'Roboto';
     font-size: 19px;
 }
@@ -73,8 +77,16 @@ input:focus{
     outline: none;
 }
 
+.input-img:invalid, .input-numeroquestoes:invalid, .input-numeroniveis:invalid, .input-titulo:invalid{
+    background: #FFE9E9;
+}
 
+section p{
+    color: #EC362D;
+    font-size: 16px;
+}
 
+/*Botão*/
 button{
     width: 80%;
     border: none;
@@ -88,4 +100,10 @@ button{
 button p{
     font-size: 18px;
     color: #FFFFFF;
+}
+
+/*Utilitários*/
+
+.hidden{
+    display: none;
 }
