--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,107 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+  word-wrap: break-word;
   }
 
 body{
-    font-family:'Roboto',sans-serif;
-    background-color:#FAFAFA;
+  font-family:'Roboto',sans-serif;
+  background-color:#FAFAFA;
+}
+
+header{
+  height: 69px;
+    width: 100%;
+    background-color: #EC362D;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    position:fixed;
+    top: 0;
+    z-index: 5;
+  
+}
+h1{
+  line-height: 43px;
+  letter-spacing: 0em;
+  text-align: left;
+  font-weight: bold;
+  font-size: 37px;
+  color: #FFFFFF;
+  display:flex;
+  justify-content:center;
+  padding-top: 13px;
+}
+h2{
+  margin-left: 11%;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 23px;
+  letter-spacing: 0em;
+  color: #000000;
+}
+.hidden {
+  display:none;
+}
+.add-quizzes{
+  cursor:pointer;
+  
+}
+
+.main-content{
+  width:100%;
+}
+
+.upper-box{
+  height: 181px;
+  width: 77%;
+  margin-left:11%;
+  border-radius: 5px;
+  border: 1px dashed #D4D4D4;
+  background-color:#FAFAFA;
+  display:flex;
+  flex-wrap:wrap;
+  justify-content:center;
+  
+}
+.space-added{
+  padding-top: 120px;
+}
+.without-quizzes{
+  width: 100%;
+  margin-top:7px;
+  display:flex;
+  justify-content:center;
+  align-items: center; 
+}
+
+.no-quizz {
+  width: 250px;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 23px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #B9B9B9;
+}
+
+.creation-button{
+  height: 40px;
+  width: 151px;
+  border-radius: 50px;
+  border: 1px dashed  #EC362D;
+  background-color: #FAFAFA;
+  cursor: pointer;
+}
+
+.quizz-creation{
+  font-size: 21px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 25px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #EC362D;
+}
+.all-quizzes{
+  padding-top: 77px;
 }
