--- a/styles/style.css
+++ b/styles/style.css
@@ -8,14 +8,14 @@ body{
   background-color:#FAFAFA;
 }
 
-header{
+.banner{
   height: 69px;
-    width: 100%;
-    background-color: #EC362D;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    position:fixed;
-    top: 0;
-    z-index: 5;
+  width: 100%;
+  background-color: #EC362D;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  position:fixed;
+  top: 0;
+  z-index: 5;
   
 }
 h1{
@@ -104,4 +104,99 @@ h2{
 }
 .all-quizzes{
   padding-top: 77px;
+}
+.loading-screen{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 69px;
+}
+.loading{
+  font-size: 30px;
+  color:#EC362D;
+}
+.quizz-image{
+  height: 181px;
+  width: 340px;
+  border-radius: 5px;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 64.58%, #000000 100%);
+  cursor: pointer;
+}
+.color-changes{
+  padding-top: 20px;
+  cursor: pointer;
+  width:340px;
+  height:181px;
+  border-radius:5px;
+  position:absolute;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 64.58%, #000000 100%);
+}
+.quizzes-titles{
+  margin: 0px 10px 5px 10px;
+  width: 301px;
+  position: absolute;
+  bottom: 0;
+}
+.quizz-card{
+  margin-top:12px;
+  margin-right: 15px;
+  height: 181px;
+  width: 340px;
+  position: relative;
+}
+.quizzes{
+  display:flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+.quizzes-titles{
+  margin: 0px 10px 5px 10px;
+  width: 301px;
+  color:#FFFFFF;
+  position: absolute;
+  bottom: 0;
+}
+
+.font{
+  font-size: 19px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+  z-index: 1;
+  position: absolute;
+}
+.blank-space{
+  margin-top: 12px;
+  margin-bottom: 20px;
+  border: none;
+  width: 90%;
+  display:flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+.settings-quizz{
+  width: 43px;
+  height: 87px;
+  background-color: #EC362D;
+  position: absolute;
+  top: 15px;
+  right: 0;
+  z-index: 2;
+  border-radius: 10px 0px 0px 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+
+}
+.myQuizzesArea{
+  width: 340px;
+  height: 181px;
+  position: relative;
 }
