--- a/styles/tela-2_pagina-de-um-quizz.css
+++ b/styles/tela-2_pagina-de-um-quizz.css
@@ -38,6 +38,7 @@ main {
     width: 100%;
     height: 142px;
     background: #000000;
+    text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -54,6 +55,7 @@ main {
 .quizz-title-box h3 {
     font-size: 39px;
     color: #FFFFFF;
+    text-align: center;
     position: absolute;
 }
 
@@ -71,7 +73,7 @@ main {
 .question-title {
     width: 340px;
     height: 89px;
-    background-color: blue;
+    margin-bottom: 12px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -82,6 +84,7 @@ main {
     font-weight: 700;
     color: #FFFFFF;
     line-height: 22px;
+    text-align: center;
 }
 
 .question-box {
@@ -106,4 +109,16 @@ figcaption {
     margin: 5px 0;
     display: flex;
     align-items: center;
-    }
+}
+
+.whitened-image {
+    opacity: 30%;
+}
+
+.red-text {
+    color: #FF0B0B;
+}
+
+.green-text {
+    color: #009C22;
+}
