--- a/styles/tela-2_pagina-de-um-quizz.css
+++ b/styles/tela-2_pagina-de-um-quizz.css
@@ -30,10 +30,12 @@ header h1 {
 
 main {
     position: relative;
-    top: 69px;
     left: 0;
 }
-
+.quizz-screen{
+    width: 100%;
+    margin: 69px 0px 69px 0px;
+}
 .quizz-title-box {
     width: 100%;
     height: 142px;
