--- a/styles/criar-quiz.css
+++ b/styles/criar-quiz.css
@@ -6,7 +6,7 @@
     height: 100%;
 }
 
-.create-screen1 .create-screen2{
+.create-screen1 .create-screen2, .create-screen4{
     width: 100%;
     height: 100%;
     display: flex;
@@ -110,6 +110,9 @@ textarea{
     border-radius: 5px;
 }
 
+/*Final screen*/
+
+
 /*Button*/
 .create-screen1 button, .create-screen2>button, .create-screen3>button{
     width: 80%;
@@ -121,12 +124,41 @@ textarea{
     margin-top: 30px;
 }
 
-.create-screen1 button p, .create-screen2>button p, .create-screen3>button p{
+.create-screen1 button p, .create-screen2>button p, .create-screen3>button p, .create-screen4 .play-quizz p{
     font-size: 18px;
     color: #FFFFFF;
+}
+
+/*Button tela final*/
+
+.create-screen4 .play-quizz, .create-screen4 .return-home{
+    background: #EC362D;
+    border-radius: 15px;
+    width: 220px;
+    height: 45px;
+    border: none;
+    cursor: pointer;
+    margin: 25px 0 10px 0;
+}
+
+.create-screen4 .return-home{
+    background: white;
+    margin: 0;
+}
+
+.create-screen4 .return-home p{
+    font-size: 18px;
+    color: #818181;
 }
 
 /*Utilitários*/
 .hidden{
     display: none;
+}
+
+
+@media (min-width: 1100px){
+    .create-screen1 .create-screen2, .create-screen3, .create-screen4{
+        width: 600px;
+    }
 }
