--- a/styles/tela-2_pagina-de-um-quizz.css
+++ b/styles/tela-2_pagina-de-um-quizz.css
@@ -191,3 +191,11 @@ figcaption {
     border: none;
 }
 
+.answeroptions{
+    width: 100%;
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    
+}
